--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -480,6 +480,7 @@ input {
             type: 'POST',
             data: {
               name:document.getElementById('name-in').value,
+              authority:[0],
               password:document.getElementById('password-in').value
             },
             success:function(res1) {
