--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -33,7 +33,7 @@
                           <div class="row" style="height:70px;">
                               <div class="col-sm-3">
                                   <div class="wrap-logo">
-                                      <a href="index.html" class="logo"></a>
+                                      <a href="/" class="logo"></a>
                                   </div>
                               </div>
                               <div class="col-sm-offset-2 col-md-offset-5 col-sm-6 col-md-4 hidden-xs">
