--- a/views/examine.ejs
+++ b/views/examine.ejs
@@ -72,8 +72,10 @@
                     </div>
                 </div>
                 <!-- END content-->
-                <div class="container title">
-                    <h1 class="title__h1 underscore">管理员管理</h1>
+                <div class="wrap wrap_white">
+                  <div class="container title">
+                        <h1 class="title__h1 underscore">管理员管理</h1>
+                    </div>
                 </div>
                 <div class="wrap wrap_gray pt20">
                     <div class="container wrap_white">
