--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
         <link rel='stylesheet' type='text/css' href='/css/bootstrap.min.css' >
         <link href="css/main.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="css/remodal.css">
+        <link rel="stylesheet" href="css/remodal-default-theme.css">
         <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
 
 
@@ -47,7 +49,8 @@
           }
         </style>
     </head>
-    <body>
+    <body >
+      <div class="remodal-bg">
       <!-- Header -->
       <header id="header" class="header">
           <div class="header__top">
@@ -199,7 +202,17 @@
                 </table>
             </div>
         </div>
-    </div>
+      </div>
+        <div class="remodal" data-remodal-id="modal">
+          <button data-remodal-action="close" class="remodal-close"></button>
+          <h1>确认？</h1>
+          <p>
+            确认执行此操作？
+          </p>
+          <br>
+          <button data-remodal-action="cancel" class="remodal-cancel">取消</button>
+          <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+        </div>
   <script type="text/javascript">
     var dataset={
       user:<%- JSON.stringify(user) %>,
@@ -210,6 +223,7 @@
     };
   console.debug(dataset);
   </script>
+  <script src="js/remodal.min.js"></script>
   <script>
 
     function alertMsg(type,msg){
@@ -284,6 +298,15 @@
       }
       //end render
       //button event
+      var inst = $('[data-remodal-id=modal]').remodal();//模态框
+      //model event
+      function modalevent(callback){
+        inst.open();
+        $(document).on('confirmation', '.remodal', function () {
+          callback();
+        });
+      }
+
       $(".preview").on('click', function(event) {
         let index=$('.preview').index(this);
         location.href='/news?name='+news[index].name;
@@ -295,69 +318,75 @@
       });
 
       $(".delete").on('click', function(event) {
-        let index=$('.delete').index(this);
-        $.ajax({
-          url: '/delete',
-          type: 'POST',
-          data: {
-            name: news[index].name,
-            type: "news"
-          }
-        })
-        .done(function(res) {
-          if(res.state){
-            alertMsg('success',res.info);
-            setTimeout(function () {
-              location.reload();
-            },500)
-          }else {
-            alertMsg('danger',res.info);
-          }
+        modalevent(()=>{
+          let index=$('.delete').index(this);
+          $.ajax({
+            url: '/delete',
+            type: 'POST',
+            data: {
+              name: news[index].name,
+              type: "news"
+            }
+          })
+          .done(function(res) {
+            if(res.state){
+              alertMsg('success',res.info);
+              setTimeout(function () {
+                location.reload();
+              },500)
+            }else {
+              alertMsg('danger',res.info);
+            }
+          });
         });
       });
 
       $(".userdelete").on('click', function(event) {
-        let index=$('.userdelete').index(this);
-        $.ajax({
-          url: '/delete',
-          type: 'POST',
-          data: {
-            name: users[index].name,
-            type: "user"
-          }
-        })
-        .done(function(res) {
-          if(res.state){
-            alertMsg('success',res.info);
-            setTimeout(function () {
-              location.reload();
-            },500)
-          }else {
-            alertMsg('danger',res.info);
-          }
+        modalevent(()=>{
+          let index=$('.userdelete').index(this);
+          $.ajax({
+            url: '/delete',
+            type: 'POST',
+            data: {
+              name: users[index].name,
+              type: "user"
+            }
+          })
+          .done(function(res) {
+            if(res.state){
+              alertMsg('success',res.info);
+              setTimeout(function () {
+                location.reload();
+              },500)
+            }else {
+              alertMsg('danger',res.info);
+            }
+          });
         });
       });
 
       $(".commentdelete").on('click', function(event) {
-        let index=$('.commentdelete').index(this);
-        $.ajax({
-          url: '/delete',
-          type: 'POST',
-          data: {
-            id: comments[index]._id,
-            type: "comment"
-          }
-        })
-        .done(function(res) {
-          console.debug(res);
-          if(res.state){
-            alertMsg('success',res.info);
-            setTimeout(function () {
-              location.reload();
-            },500)
-          }else {
-            alertMsg('danger',res.info);
-          }
+        modalevent(()=>{
+          let index=$('.commentdelete').index(this);
+          $.ajax({
+            url: '/delete',
+            type: 'POST',
+            data: {
+              id: comments[index]._id,
+              type: "comment"
+            }
+          })
+          .done(function(res) {
+            console.debug(res);
+            if(res.state){
+              alertMsg('success',res.info);
+              setTimeout(function () {
+                location.reload();
+              },500)
+            }else {
+              alertMsg('danger',res.info);
+            }
+          });
         });
       });
 
