--- a/views/change.ejs
+++ b/views/change.ejs
@@ -118,11 +118,16 @@
                 <div class="col-xs-0 col-sm-0 col-md-10 col-lg-10"></div>
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                   <input id='bt1' type="button" class="btn btn-primary " value='上传修改' class="btn"></input>
+                  <button  class="btn btn-back" onclick="tz()">返回上一页</button>
                 </div>
               </div>
         </div>
       </section>
   <script type="text/javascript">
+  function tz(){
+    window.location.href='/admin';
+}
+
   var dataset={
     news:<%- JSON.stringify(news)%>,
   };
