--- a/views/news.ejs
+++ b/views/news.ejs
@@ -178,21 +178,20 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="social navbar-right">
-                            <p class="social__text">We are in social networks</p>
                             <ul class="social__list">
                                 <li class="social__item">
-                                    <a class="facebook" href="#">
-                                        <i class="icon-facebook"></i>
+                                    <a href="www.baidu.com">
+                                        <i>百度</i>
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="twitter" href="#">
-                                        <i class="icon-twitter"></i>
+                                    <a href="http://www.sina.com.cn">
+                                        <i>新浪</i>
                                     </a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="gplus" href="#">
-                                        <i class="icon-gplus"></i>
+                                    <a href="http://www.sohu.com">
+                                        <i>搜狐</i>
                                     </a>
                                 </li>
                             </ul>
